fix floating button problem, create BoardShareLink, fix hr spacing problem

--- a/src/App.css
+++ b/src/App.css
@@ -966,16 +966,9 @@ button {
   align-items: center;
   margin: auto;
 }
-.board-ops.left {
-  width: 50%;
-  padding-right: 20px;
-}
 
 .board-ops.right {
-  position: relative;
-  top: 0;
-  right: 0;
-  width: 50%;
+  padding-right: 20px;
 }
 
 /*
